# OctoAPI

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
OctoAPI/: __init__.py  octo_api.py  octopus_energy_api.py  request_api.py
docs/: 404.md  _config.yml  changelog.md  index.md  quickstart.md
docs/OctoAPI/: electricity_meter_point.md  energy_products.md  index.md
